# hackathon-2-todo-app

./: .gitignore  CLAUDE.md
phase-1/: CLAUDE.md  README.md  pyproject.toml
phase-1/.specify/memory/: constitution.md
phase-1/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
phase-1/specs/002-phase1-extended-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/src/todo_app/: cli.py  cli_extended.py  main.py  models.py  notifications.py  storage.py  ui.py
phase-1/src/todo_app.egg-info/: PKG-INFO  SOURCES.txt
phase-2/.specify/memory/: constitution.md
phase-2/backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
phase-2/backend/.venv_new/: pyvenv.cfg
phase-2/backend/app/: __init__.py  main.py
phase-2/backend/app/api/: deps.py
phase-2/backend/app/api/routes/: health.py  tasks.py
phase-2/backend/app/core/: __init__.py  config.py  database.py  security.py
phase-2/backend/app/models/: __init__.py  task.py
phase-2/backend/app/schemas/: __init__.py  task.py
phase-2/backend/app/services/: task_service.py
phase-2/backend/todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phase-2/frontend/: .gitignore  CLAUDE.md  package-lock.json  package.json  tailwind.config.ts
phase-2/frontend/.backup-20260102-090325/: styles-globals.css
phase-2/frontend/src/: middleware.ts
phase-2/specs/002-phase2-fullstack/: architecture.md  overview.md  plan.md  tasks-with-skills.md  tasks.md
phase-2/specs/003-todo-web-ui/: data-model.md  plan.md  research.md  spec.md  tasks.md
(+93 files in other folders)
